--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-particles": "^2.12.2",
     "react-router-dom": "^7.4.1",
